use bt name from config file

--- a/esp32_ble/src/config.json
+++ b/esp32_ble/src/config.json
@@ -1,4 +1,5 @@
 {
+    "bluetooth_name": "RUSTYESP32",
     "basic_write_pin_nums": [14],
     "pwm_write_pin_nums": [],
     "basic_read_pin_nums": [],
