in progress reading regular and adc pin data

--- a/esp32_ble/src/config.json
+++ b/esp32_ble/src/config.json
@@ -1,5 +1,5 @@
 {
-    "bluetooth_name": "RUSTYESP32",
+    "bluetooth_name": "RUSTY",
     "basic_write_pin_nums": [14],
     "pwm_write_pin_nums": [],
     "basic_read_pin_nums": [],
