read adc pins and send back as pair of u8

--- a/esp32_ble/src/config.json
+++ b/esp32_ble/src/config.json
@@ -3,5 +3,5 @@
     "basic_write_pin_nums": [14],
     "pwm_write_pin_nums": [],
     "basic_read_pin_nums": [],
-    "adc_read_pin_nums": []
+    "adc_read_pin_nums": [32,35]
 }
